增加Maven编译插件以修复编译报错：class lombok.javac.apt.LombokProcessor (in unnamed module @0x29fe4840) cannot access class com.sun.tools.javac.processing.JavacProcessingEnvironment (in module jdk.compiler) because module jdk.compiler does not export com.sun.tools.javac.processing to unnamed module @0x29fe4840